# CITS5553_G1_Semantic_Word_Search

./: .gitignore  23492211  LICENSE  README.md
Contributions/21980614/: LLM_Keyword extraction.ipynb
Contributions/23017256/: 2_File_Unzip_Summary_Extraction_Rake.ipynb  LDA (Latent Dirichlet Allocation).ipynb  LLM Model P1.ipynb  LLM_Keyword extraction.ipynb  LLM_Model_CHATGPT.ipynb  Sentence_Transformers.ipynb  compare models.xlsx  compare outputs.xlsx  compare rake and pos_ner.csv  gpt2.ipynb
Contributions/23215183/: RoBERTa-_USE_large model.ipynb  RoBERTa-large model.ipynb  test.txt  user query.ipynb
Contributions/23438071/: Preprocessing POC.py  TinyBERT.py  bert_model converted from. the ipynb file.py  index.py  keybert.py  keyphrase_transformer converted from ipynb file.py  main file with 3 apis.py
Contributions/23492211/: 1_YAKE_File_Unzip_Summary_Extraction.ipynb  2_Plain_KeyBERT_Keyword Extraction.ipynb  3_Plain_KeyPhraseTransformer_Keyword extraction.ipynb  Final-User text-UNSPSC .ipynb  (+7 more)
Data Science/: File_Download.ipynb
DataScience/: 1_File_Download.ipynb  2_File_Unzip_Summary_Extraction.ipynb  BERT-Large-Uncased.ipynb
Dataset/: PostCodes Data Extract - 07082023.xlsx
Preprocessing/: 2_File_Unzip_Summary_Extraction.ipynb  3_Load_Docs_to_VectorDB.py  Requirements.txt
www/Server/: Requirements.txt  bert_model_updated.py  environment.yml  main.py  pyproject.toml  try.csv
www/Server/app/: main.py
www/Server/app/api/: get_documents.py  get_filters.py  get_semantic_score.py
www/Server/app/lib/: bert_model.py  keyphrase_transformer.py
(+55 files in other folders)
